--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build app
-        run: npm run dist
+  run: npm run dist -- --publish=never
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
