--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,14 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+  run: npm install
 
-      - name: Build app
-  run: npm run dist -- --publish=never
+- name: Build app
+  run: |
+    npm run dist -- --publish=never
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Certificate-Tracker-${{ matrix.os }}
-          path: dist/
+- name: Upload build artifacts
+  uses: actions/upload-artifact@v4
+  with:
+    name: Certificate-Tracker-${{ matrix.os }}
+    path: dist/
