--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build installers
-        run: npm run dist
-        env:
+      - name: Build app
+  run: npm run dist -- --publish=never
+  env:
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    CSC_IDENTITY_AUTO_DISCOVERY: "false"
+
+
           # يمنع محاولة النشر/الريليز ويخليها build فقط
           CSC_IDENTITY_AUTO_DISCOVERY: "false"
 
